--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/backgroundmin"
+    android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context="com.example.tanishqsaluja.beep.MainActivity">
