--- a/app/src/main/res/layout/desc_activity.xml
+++ b/app/src/main/res/layout/desc_activity.xml
@@ -13,10 +13,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/desc"
-            android:text="hello"
+            android:text="Hello"
             android:textColor="#000"
-            android:textStyle="bold"
-            android:textSize="20dp"
+            android:textSize="16dp"
             />
 
     </android.support.v7.widget.CardView>
